hw6/order/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kia-order-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kia-order-hw6
  template:
    metadata:
      labels:
        app: kia-order-hw6
    spec:
      containers:
        - name: kia-otus-arch-order
          image: ilyakozyrev/kia-otus-arch-order:hw6
          imagePullPolicy: Always
          ports:
            - name: order-web
              containerPort: 8004
          livenessProbe:
            httpGet:
              port: 8004
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8004
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
