hw6/order/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kia-order-service
  labels:
    app: kia-order-hw6
spec:
  selector:
    app: kia-order-hw6
  ports:
    - protocol: TCP
      port: 9004
      targetPort: order-web
  type: NodePort
